--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "daisyui": "^5.0.43",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
